--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,6 +35,10 @@
 
     <string name="db_size_label">Number of known APs</string>
 
+    <string name="dbg_level">Debug Log Level</string>
+    <string name="dbg_level_description">Debug logging (0=off, 1=sparse, 2=normal 3=verbose).</string>
+    <string name="dbg_level_default">0</string>
+
     <!-- Generic suffix strings -->
     <string name="meters">meters</string>
     <string name="seconds">seconds</string>
