Add data export

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,7 @@
 
     <string name="wifi_detail_accuracy">Accuracy: %s</string>
     <string name="wifi_show_map">Show on map</string>
+
+    <string name="data_export">Export data</string>
+    <string name="data_export_error">Couldn\'t export data</string>
 </resources>
