Fix https://github.com/n76/wifi_backend/issues/12 and improve import/export UI add German Translation
Signed-off-by: Tod Fitch <Tod@FitchDesign.com>

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -44,7 +44,7 @@
     <string name="drawer_libraries">Externe Bibliotheken</string>
     <string name="drawer_website">Website</string>
 
-    <string name="notification_permission">Berühren um erforderlichen Standortzugriff zu erlauben</string>
+    <string name="preference_grant_permission">Berühren um erforderlichen Standortzugriff zu erlauben</string>
 
     <string name="title_wifi_list">WLANs</string>
     <string name="title_wifi_detail">WLAN Details</string>
