--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -16,6 +16,9 @@
     <string name="gps_min_time">Интервал узорака</string>
     <string name="gps_min_time_description">Време између узорака ГПС локације (секунди).</string>
 
+    <string name="gps_valid_time">GPS valid time</string>
+    <string name="gps_valid_time_description">The time in which the last GPS signal is valid (seconds).</string>
+
     <!-- AP preferences -->
     <string name="ap_config">Претпоставке бежичних АП-а</string>
 
@@ -41,8 +44,7 @@
     <string name="drawer_libraries">External libraries</string>
     <string name="drawer_website">Website</string>
 
-    <string name="notification_permission">Tap to grant the necessary location permission</string>
-    <string name="preference_grant_permission">@string/notification_permission</string>
+    <string name="preference_grant_permission">Tap to grant the necessary location permission</string>
 
     <string name="title_wifi_list">WiFis</string>
     <string name="title_wifi_detail">WiFi Detail</string>
