--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,8 +44,7 @@
     <string name="drawer_libraries">External libraries</string>
     <string name="drawer_website">Website</string>
 
-    <string name="notification_permission">Tap to grant the necessary location permission</string>
-    <string name="preference_grant_permission">@string/notification_permission</string>
+    <string name="preference_grant_permission">Tap to grant the necessary location permission</string>
 
     <string name="title_wifi_list">WiFis</string>
     <string name="title_wifi_detail">WiFi Detail</string>
