Tweak defaults and strings.
Loosen GPS accuracy requirement, increase move guard. And
change "accuracy" to "observed range" when displaying
information about an AP.

Signed-off-by: Tod Fitch <Tod@FitchDesign.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="title_wifi_list">WiFis</string>
     <string name="title_wifi_detail">WiFi Detail</string>
 
-    <string name="wifi_detail_accuracy">Accuracy: %s</string>
+    <string name="wifi_detail_accuracy">Observed Range: %s</string>
     <string name="wifi_show_map">Show on map</string>
 
     <string name="data_export">Export data</string>
