--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -55,6 +55,8 @@
     <string name="wifi_show_map">Auf der Karte anzeigen</string>
 
     <string name="data_export">Daten exportieren</string>
+    <string name="data_export_all">Export aller Daten</string>
+    <string name="data_export_changed">Export geänderte Daten</string>
     <string name="data_export_error">Datenexport fehlgeschlagen</string>
 
     <string name="data_import">Daten importieren</string>
