--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,9 +39,9 @@
     <string name="db_change_label">Number of new or updated APs</string>
 
     <!-- Generic suffix strings -->
-    <string name="pref_meters"><xliff:g id="number of meters" exmaple="42">%s</xliff:g> meters</string>
-    <string name="pref_seconds"><xliff:g id="number of seconds" exmaple="42">%s</xliff:g> seconds</string>
-    <string name="pref_samples"><xliff:g id="number of samples" exmaple="42">%s</xliff:g> samples</string>
+    <string name="pref_meters"><xliff:g id="number of meters" example="42">%s</xliff:g> meters</string>
+    <string name="pref_seconds"><xliff:g id="number of seconds" example="42">%s</xliff:g> seconds</string>
+    <string name="pref_samples"><xliff:g id="number of samples" example="42">%s</xliff:g> samples</string>
     <string name="statistic_records"><xliff:g id="number of APs" example="12">%1$d</xliff:g> APs</string>
     <string name="statistic_changed"><xliff:g id="number of new or updated APs" example="12">%1$d</xliff:g> APs</string>
 
