--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,9 @@
 
     <string name="data_import">Import data</string>
     <string name="data_import_error">Couldn\'t import data</string>
+
+    <string name="data_reset">Reset database</string>
+    <string name="data_reset_warning">The database can only be restored if you created an backup before the deletion</string>
+    <string name="data_reset_yes">Delete the data</string>
+    <string name="data_reset_no">Keep the data</string>
 </resources>
